glass overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 * {
+  box-sizing: border-box;
+  overflow: hidden;
   padding: 0px;
   margin: 0px;
 }
